--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ author:
   impactstory      : # URL
   orcid            : #
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : #
   researchgate     : "https://www.researchgate.net/profile/Nariman-Niknejad"
   scopus           : # URL
 
@@ -60,7 +60,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # "Nariman Niknejad"
+  linkedin         : "Nariman Niknejad"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
