--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "Nariman Niknejad"
+  linkedin         : "nariman-niknejad"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
